--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <script src="https://kit.fontawesome.com/2af0f0ed4e.js" crossorigin="anonymous"></script>
+
+      <!--  Magnific Popup css file  -->
+      <link rel="stylesheet" href="./vendor/Magnific-Popup/dist/magnific-popup.css">
 </head>
 <body>
     
@@ -61,11 +64,11 @@
 
 
     <!--  ======================= Start Main Area ================================ -->
-    <main class="site-main">
+    <main class="site_main">
 
 
         <!--  ======================= Start Banner Area =======================  -->
-        <section class="site-banner">
+        <section class="site_banner">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 site-title">
@@ -89,7 +92,7 @@
 
         <!--  ======================= Start About Area =======================  -->
 
-        <section class="about-area">
+        <section class="about_area">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
@@ -125,53 +128,53 @@
 
         <!--  ======================= Start Programming skills Area =======================  -->
 
-        <section class="brand-area">
+        <section class="skill_area">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xl-6 col-lg-12 col-md-12">
                         <div class="first-row row">
                             <div class="col-lg-4 col-md-6 col-sm-6">
-                                <div class="single-brand">
+                                <div class="single_skill">
                                     <img src="./img/brands/rsz_lg1.png" alt="Brand-1 ">
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
-                                <div class="single-brand">
+                                <div class="single_skill">
                                     <img src="./img/brands/rsz_lg2.png" alt="Brand-2 ">
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
-                                <div class="single-brand">
+                                <div class="single_skill">
                                     <img src="./img/brands/rsz_lg3.gif" alt="Brand-3 ">
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
-                                <div class="single-brand">
+                                <div class="single_skill">
                                     <img src="./img/brands/rsz_lg4.png" alt="Brand-4">
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
-                                <div class="single-brand">
+                                <div class="single_skill">
                                     <img src="./img/brands/rsz_lg5.png" alt="Brand-5 ">
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
-                                <div class="single-brand">
+                                <div class="single_skill">
                                     <img src="./img/brands/rsz_lg6.png" alt="Brand-6">
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
-                                <div class="single-brand">
+                                <div class="single_skill">
                                     <img src="./img/brands/rsz_lg7.png" alt="Brand-7 ">
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
-                                <div class="single-brand">
+                                <div class="single_skill">
                                     <img src="./img/brands/rsz_lg8.png" alt="Brand-8 ">
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6">
-                                <div class="single-brand">
+                                <div class="single_skill">
                                     <img src="./img/brands/rsz_lg9.png" alt="Brand-9">
                                 </div>
                             </div>
@@ -205,7 +208,7 @@
 
 
         <!--  ======================= Start Services Area =======================  -->
-        <section class="services-area">
+        <section class="services_area">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center services-title">
@@ -272,6 +275,110 @@
         <!--  ======================= End Services Area =======================  -->
 
 
+        <!--  ======================= Start Projects Area =======================  -->
+
+
+        <section class="project_area">
+            <div class="container">
+                <div class="project-title pb-5">
+                    <h1 class="text-uppercase title-h1">Recently Done Project</h1>
+                    <h1 class="text-uppercase title-h1">Quality Work</h1>
+                </div>
+
+                <div class="button-group">
+                    <button type="button" class="active" id="btn1" data-filter="*">All</button>
+                    <button type="button" data-filter=".popular">Popular</button>
+                    <button type="button" data-filter=".latest">Latest</button>
+                    <button type="button" data-filter=".following">Following</button>
+                    
+                </div>
+
+                <div class="row grid">
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                        <div class="our-project">
+                            <div class="img">
+                                <a class="test-popup-link" href="./img/portfolio/p1.png">
+                                    <img src="./img/portfolio/p1.png" alt="portfolio-1" class="img-fluid">
+                                </a>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Minimul Desing</h4>
+                                <span class="text-secondary">Latest, Portfolio</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
+                        <div class="our-project">
+                            <div class="img">
+                                <a class="test-popup-link" href="./img/portfolio/p2.png">
+                                    <img src="./img/portfolio/p2.png" alt="portfolio-2" class="img-fluid">
+                                </a>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Paint Wall</h4>
+                                <span class="text-secondary">Popular, Portfolio</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
+                        <div class="our-project">
+                            <div class="img">
+                                <a class="test-popup-link" href="./img/portfolio/p6.PNG">
+                                    <img src="./img/portfolio/p6.PNG" alt="portfolio-6" class="img-fluid">
+                                </a>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Together sign</h4>
+                                <span class="text-secondary">Following, Portfolio</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
+                        <div class="our-project">
+                            <div class="img">
+                                <a class="test-popup-link" href="./img/portfolio/p3.png">
+                                    <img src="./img/portfolio/p3.png" alt="portfolio-3" class="img-fluid">
+                                </a>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Female light</h4>
+                                <span class="text-secondary">Popular, Portfolio</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                        <div class="our-project">
+                            <div class="img">
+                                <a class="test-popup-link" href="./img/portfolio/p4.png">
+                                    <img src="./img/portfolio/p4.png" alt="portfolio-4" class="img-fluid">
+                                </a>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Fourth Air</h4>
+                                <span class="text-secondary">Latest, Portfolio</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                        <div class="our-project">
+                            <div class="img">
+                                <a class="test-popup-link" href="./img/portfolio/p5.png">
+                                    <img src="./img/portfolio/p5.png" alt="portfolio-5" class="img-fluid">
+                                </a>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Muliple fown</h4>
+                                <span class="text-secondary">Latest, Portfolio</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!--  ======================= End Projects Area =======================  -->
+
      </main>
      <!--  ======================= End Main Area ================================ -->
     <!--  Jquery js file  -->
@@ -280,5 +387,13 @@
     <!--  Bootstrap js file  -->
     <script src="./js/bootstrap.min.js"></script>
 
+    <!--  isotope js library  -->
+    <script src="./vendor/isotope/isotope.min.js"></script>
+
+    <!--  custom js file  -->
+    <script src="./js/main.js"></script>
+
+    <!--  Magnific popup script file  -->
+    <script src="./vendor/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
 </body>
 </html>
