--- a/index.html
+++ b/index.html
@@ -379,8 +379,65 @@
 
         <!--  ======================= End Projects Area =======================  -->
 
+
+        <!--  ========================== Start Subscribe Area ============================  -->
+        <section class="subscribe_area">
+            <div class="container subscribe">
+                <div class="row">
+                    <div class="col-lg-12 text-center subscribe-title">
+                        <h4 class="text-uppercase">Get Update From anywhere</h4>
+                        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam,
+                            consequuntur.</p>
+                    </div>
+                </div>
+                <div class="d-sm-flex justify-content-center">
+                    <form class="w-50">
+                        <div class="row d-flex flex-row flex-wrap">
+                            <div class="col input-textbox">
+                                <input type="text" id="txtemail" class="form-control" placeholder="Email">
+                            </div>
+                            <div class="col">
+                                <div class="btn-submit">
+                                    <button type="submit" class="btn btn-success float-right">Subscribe</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!--  ========================== End Subscribe Area ============================  -->
+
+
      </main>
      <!--  ======================= End Main Area ================================ -->
+
+
+     <!--  ======================= Start Footer Area ================================ -->
+     <footer class="footer_area">
+        <div class="container">
+            <div class="">
+                <div class="site-logo text-center py-4">
+                    <a href="#"><img src="./img/logo.png" alt="logo"></a>
+                </div>
+                <div class="social text-center">
+                    <h5 class="text-uppercase">Follow me</h5>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+                <div class="copyrights text-center">
+                    <p class="para">
+                        Copyright ©2020 All rights reserved | This template is made by
+                        <a href="#"><span style="color: var(--primary-color);">Alex Preda</span></a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--  ======================= End Footer Area ================================ -->
+
+
     <!--  Jquery js file  -->
     <script src="./js/jquery.3.4.1.js"></script>
 
