--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
       <!--  Magnific Popup css file  -->
       <link rel="stylesheet" href="./vendor/Magnific-Popup/dist/magnific-popup.css">
+
+      <!--  Responsive css file  -->
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
     
